<resources>
    <string name="app_name">ToDoList</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="closed">Closed</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="name">Name</string>

</resources>
